# tools

./: .gitignore  COPYING  ChangeLog  Makefile  README.md  freedict-database.rng  mark_dubious_translations.pl  requirements.txt  teiaddespeak  teiaddphonetics  teisort.pl
api/: config.py
api/file_manager/: README.md  file_manager.py
api/generator/: generator.py
buildhelpers/: README.md  changelog.py  rm_duplicates.py
exporters/tei2anki/: tei2anki.py
fd_tool/: README.md  fd_api.py  fd_changelog.py  fd_file_mgr.py  pyproject.toml  rm_duplicates.py  setup.cfg  setup.py
fd_tool/fd_tool/: config.py
fd_tool/fd_tool/api/: config.py  dictionary.py  jsonhandlers.py  metadata.py  releases.py  xmlhandlers.py
fd_tool/fd_tool/scripts/: fd_api.py  fd_file_mgr.py
fd_tool/tests/: test_dictionary.py
file_mgmt/: fd_api.py  fd_file_mgr.py  setup.py
file_mgmt/fd_file_mgmt/: config.py
file_mgmt/tests/: test_dictionary.py
importers/: README.md  pyproject.toml  setup.cfg  setup.py
importers/dan-eng/: dan-eng.py
importers/ding2tei/: .gitignore  GNUmakefile  README  ToDo  dictstructure.py  ding2tei.py  intermediate.py  languages.py  tei.py
importers/epo-eng/: README.dict  README.md  epo-eng  epo-eng-header.tei  epo-eng-import.py  epo-eng.patch
importers/fd_import/: README  __init__.py  tests.py
importers/tei-p4/: README  dict2tei.py
importers/tokenizer/: __init__.py  tests.py  tokenizer.py
importers/util/: __init__.py  output.py  tokenizer.py
irc/: README  dict_lookup.py  sopel.cfg
mk/: config.mk  dictroot.mk  dicts.mk
mk/qa/: 1.md
xsl/: tei2c5.xsl
(+195 files in other folders)
