[project]
name = "fd_tool"
version = "0.1"
dependencies = [
    "semver",
]

[project.scripts]
fd_api = "fd_tool.scripts.fd_api:main"
fd_file_mgr = "fd_tool.scripts.fd_file_mgr:main"


[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
