[metadata]
name = "fd_tool
version = 0.1.0
description = FreeDict tooling for the build system

[options]
zip_safe = False
include_package_data = True
#packages = find:
#install_requires =
#    requests
#    importlib-metadata; python_version<"3.8"

[options.entry_points]
console_scripts =
    fd_api = fd_api:main
    fd_file_mgr = fd_file_mgr:main
    fd_changelog = fd_changelog:main
    rm_duplicates = rm_duplicates:main


